Remove  prefix from tests names in PegUtilsLegacyTest